--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "qq-api",
-  "version": "0.1",
-  "description": "QQ小程序服务端API",
+  "version": "1.35.1",
+  "description": "QQ公共平台Node库 API",
   "main": "index.js",
   "scripts": {
     "test": "make test-all"
